--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/styled-components": "^5.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-grid-system": "^7.2.0",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
     "react-spacer": "^1.3.0",
